# ineview

./: .cSpell.json  .gitignore  Dockerfile  README.md  netlify.toml  nx.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  workspace.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: post-create.sh
.github/workflows/: deploy.yml
apps/server/: project.json
apps/server/questions/: admin.py  models.py  serializers.py  urls.py  views.py
apps/server/questions/migrations/: 0001_initial.py  0002_question_descriptions.py  0003_rename_descriptions_question_description.py  0004_auto_20220219_1123.py  0005_questionset_created_date.py
apps/server/server/: settings.py  urls.py
apps/server/user/: authentication.py  views.py
apps/server/video/: admin.py  apps.py  emotion_recognition.py  jobs.py  models.py  serializers.py  urls.py  views.py
apps/server/video/migrations/: 0001_initial.py  0002_videoupload_is_processed.py  0003_auto_20220223_1140.py
apps/site/: .eslintrc.cjs  package.json  project.json  svelte.config.js  tsconfig.json
apps/site/src/: app.html
apps/site/src/lib/: constants.ts  environment.ts  http.ts
apps/site/src/lib/components/record/: RecordButton.svelte
apps/site/src/routes/: __error.svelte  __layout.svelte  index.svelte  login.svelte  record.svelte  stats-[attemptId].svelte
apps/site/src/routes/attempt-set/[id]/: stats.svelte
apps/site/src/routes/question/[id]/: record.svelte
apps/site/src/routes/questions-set/[id]/: details.svelte
apps/site/src/stores/: index.ts
