[tool.poetry]
name = "server"
version = "0.1.0"
description = "The backend server for the ineview services"
license = "MIT"
authors = []

[tool.poetry.dependencies]
Django = "3.2"
django-cors-headers = "^3.11.0"
djangorestframework = "^3.13.1"
python = ">=3.10,<3.11"
tensorflow = "^2.8.0"
opencv-contrib-python = "^4.5.5"
fer = "^22.0.1"
ffmpeg-python = "^0.2.0"
schedule = "^1.1.0"
django-rest-auth = "^0.9.5"
django-allauth = "^0.48.0"
gunicorn = "^20.1.0"
whitenoise = "^6.0.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.3"
opencv-python = "^4.5.5"
argon2-cffi = "^21.3.0"
spacy = "^3.2.4"
sentence-transformers = "^2.2.0"
nltk = "^3.7"
scikit-learn = "^1.0.2"
ipywidgets = "^7.7.0"
faiss-cpu = "^1.7.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
django-extensions = "^3.1.5"
ipykernel = "^6.9.1"
jupyterlab = "^3.2.9"
httpie = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
